# FCC

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  depcomp  env.mk  ifsf_main  install-sh  missing  readme.txt  run_log.bak
.deps/: ifsf_main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
document/: structure.txt
include/: apue.h  file_opt.h  lib_db.h  structure_algorithm.h  tcp_lib.h  terminal.h  unp.h
lib/: #]]%
lib_src/: Makefile  Makefile.am  Makefile.in  dblib.c  file_opt.c  structure_algorithm.c  tcp_lib.c  terminal.c
lib_src/.deps/: dblib.Po  file_opt.Po  signal_lib.Po  (+3 more)
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  ifsf_main  run_log.bak  subenv.mk
src/.deps/: ifsf_main.Po
src/ifsf/: Makefile  Makefile.am  Makefile.in  ifsf_common.h  ifsf_commu.c  ifsf_commu.h  ifsf_operate.c  ifsf_operate.h
src/ifsf/.deps/: ifsf_commu.Po  ifsf_operate.Po
src/include/: ifsf_common.h  ifsf_common.h.gch  ifsf_main.h  ifsf_operate.h  lis_common.h
src/init/: Makefile  init.c  init.h
src/init/.deps/: init.Po
src/main/: Makefile  Makefile.am  Makefile.in  ifsf_main.c  ifsf_main.c~  ifsf_main.h  lis_common.c  lis_hengshan.c  lis_jialijia.c
src/main/.deps/: lis_common.Po  lis_hengshan.Po  lis_jialijia.Po
src/test/: Makefile  README  tcp_get_time  test_db  test_db.c  test_fifo  test_fifo.c  test_get_time  test_get_time.c  test_pipe  test_pipe.c  test_signal  test_signal.c  test_tank_parse  test_tank_parse.c  test_tcp  test_tcp.c
